# hackasat-qualifier-2022

./: 2022_tickets_export_2022_06_27.csv  README.md
authentication_equivalence_principle/: .gitignore  .gitlab-ci.yml  Makefile  readme.md
authentication_equivalence_principle/generator/: CMakeLists.txt  Dockerfile  gen.cpp  main.cpp  run.sh
authentication_equivalence_principle/generator/orbit_auth/: CMakeLists.txt  dll_stub.cpp  dll_stub.hpp
authentication_equivalence_principle/generator/xxtea/: CMakeLists.txt  auth.cpp  auth.hpp  secret.cpp  secret.h
basic_handoff/: .gitlab-ci.yml  Makefile
basic_service/: .gitlab-ci.yml  Makefile  README.md
bitflipper/: .gitignore  .gitlab-ci.yml  Makefile  Readme.md  docker-compose.yml  partitions.py
black_hole/: .gitignore  .gitlab-ci.yml  Makefile  Readme.md
blazing_etudes/: .gitignore  .gitlab-ci.yml  Makefile  README.md
khan/static/: CMakeLists.txt  DeOrbit.cpp  Dockerfile  HardwareLinux.cpp  Touchdown.cpp  WaitChute.cpp  WaitCool.cpp  aarch64.cmake  buildme.sh  main.cpp  surrogate.py
khan/static/includes/: DeOrbit.h  Hardware.h  PID.h  StateMachine.h  Touchdown.h  WaitChute.h  WaitCool.h  types.h
starsabove/: Cargo.toml  Makefile
starsabove/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
starsabove/client/: Cargo.toml
starsabove/client/src/: comms.rs  config.rs  lib.rs  main.rs
starsabove/docker/: Dockerfile  entrypoint.sh  generator.sh
starsabove/messages/: Cargo.toml
starsabove/messages/src/: lib.rs  messages.rs  route.rs
starsabove/routelib/: Cargo.toml
starsabove/routelib/src/: lib.rs
starsabove/server/: Cargo.toml
starsabove/server/src/: client_handler.rs  config.rs  lib.rs  main.rs  router.rs
starsabove/solver/: Dockerfile  solution.txt  solver.py
starsabove/tests/: Cargo.toml
starsabove/tests/src/: lib.rs
(+434 files in other folders)
