[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
messages = {path = "../messages"}
routelib = {path = "../routelib"}
client = {path = "../client"}
debug_print = "1.0.0"
net2 = "0.2.37"
